# webcanvas-client

./: webcanvas-client.cabal
exe/: webcanvas-client.hs
lib/Application/WebCanvas/Client/: Command.hs  Config.hs  Job.hs  ProgType.hs
